--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "maildev": "^2.0.5",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "dayjs": "^1.11.8"
     }
 }
